# bc-python

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-EN.md  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  content_improvement.md  feature_request.md  question.md
_docs/cheatsheets/: README.md  complete-reference.md  data-structures.md  generate-pdfs.sh  python-basics.md
bootcamp/week-01-introduccion_python_y_entorno/: README.md  rubrica-evaluacion.md
bootcamp/week-02/: README.md  (+1 more)
bootcamp/week-13-testing_debugging_y_logging/2-ejercicios/02-fixtures-parametrize/starter/: pyproject.toml
bootcamp/week-13-testing_debugging_y_logging/2-ejercicios/02-fixtures-parametrize/starter/tests/: conftest.py  test_user_manager.py
bootcamp/week-13/3-proyecto/starter/: pyproject.toml
bootcamp/week-13/3-proyecto/starter/src/: calculator.py  history.py  memory.py
bootcamp/week-13/3-proyecto/starter/tests/: conftest.py  test_basic_ops.py  test_history.py
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/: .env.example  pyproject.toml
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/src/: cli.py  main.py
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/src/api/: client.py
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/src/models/: weather.py
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/src/services/: __init__.py  favorites_service.py  history_service.py
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/src/storage/: __init__.py  json_storage.py
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/src/utils/: __init__.py  config.py  display.py
bootcamp/week-14-proyecto_final_integrador/3-proyecto/starter/tests/: conftest.py  test_client.py  test_models.py  test_services.py  test_storage.py
(+275 files in other folders)
