[project]
name = "fixtures-parametrize"
version = "0.1.0"
description = "Ejercicio de fixtures y parametrización con pytest"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
